test/expected/regression-http-parser.txt
/scripts/regression-http-parser.js:25
      throw new Error('trace');
      ^

Error: trace
    at Socket.res.socket._read (/scripts/regression-http-parser.js:25:13)
    at Socket.Readable.read (_stream_readable.js:431:10)
    at addChunk (_stream_readable.js:253:12)
    at readableAddChunk (_stream_readable.js:239:11)
    at Socket.Readable.push (_stream_readable.js:197:10)
    at TCP.onread (net.js:589:20)
    at Socket.connect (net.js:973:40)
    at Agent.connect [as createConnection] (net.js:108:35)
    at Agent.createSocket (_http_agent.js:222:26)
    at Agent.addRequest (_http_agent.js:184:10)
    at new ClientRequest (_http_client.js:272:16)
    at request (http.js:39:10)
    at Object.get (http.js:43:13)
    at Server.<anonymous> (/scripts/regression-http-parser.js:16:8)
    at Object.onceWrapper (events.js:314:30)
    at emitNone (events.js:105:13)
    at Server.emit (events.js:207:7)
    at emitListeningNT (net.js:1342:10)
    at _combinedTickCallback (internal/process/next_tick.js:138:11)
    at process._tickCallback (internal/process/next_tick.js:201:9)
    at internalNextTick (internal/process/next_tick.js:322:7)
    at Server.setupListenHandle [as _listen2] (net.js:1329:3)
    at listenInCluster (net.js:1363:12)
    at GetAddrInfoReqWrap.doListen [as callback] (net.js:1489:7)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:97:10)
    at createServerHandle (net.js:1239:14)
    at Server.setupListenHandle [as _listen2] (net.js:1295:14)
    at listenInCluster (net.js:1363:12)
    at GetAddrInfoReqWrap.doListen [as callback] (net.js:1489:7)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:97:10)
    at Object.lookup (dns.js:180:19)
    at lookupAndListen (net.js:1484:7)
    at Server.listen (net.js:1459:7)
    at Object.<anonymous> (/scripts/regression-http-parser.js:14:8)
    at Module._compile (module.js:569:30)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:503:32)
    at tryModuleLoad (module.js:466:12)
    at Function.Module._load (module.js:458:3)
    at Function.Module.runMain (module.js:605:10)
    at startup (bootstrap_node.js:158:16)
    at bootstrap_node.js:575:3
